added payments tracking

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -63,6 +63,9 @@ en:
   number:
     format:
       precision: 2
+    currency:
+      format:
+        unit: '€'
   date:
     formats:
       default: "%d.%m.%Y"
